[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kernel"
# build = "cargo +nightly rustc --lib --target nvptx64-nvidia-cuda --release -- --emit asm"
crate-type = ["cdylib"]

[features]
std = []

[dependencies]
libgdx-xs128 = "0.1.1"
# libgdx-xs128 = { path = "../../libgdx-xs128" }
